tests/negative/regression/r11.orng
// r11.orng:6:28: error: expected a value of type `[*]String`, got a value of type `Int`
//     let (a, b, c): []String
//                           ^
// 
fn main()->() {
    let (a, b, c): []String
}